# orca3

./: .gitignore  Dockerfile  LICENSE  README.md  setup.bash  workspace.repos
.github/workflows/: build_test.yml  docker_image.yml  foxy_ci.yml  (+2 more)
orca_base/: CMakeLists.txt  README.md  package.xml
orca_base/include/orca_base/: base_context.hpp  joystick.hpp  pid.hpp  thrusters.hpp  underwater_motion.hpp
orca_base/scripts/: fake_barometer.py  fake_driver.py
orca_base/src/: baro_filter_node.cpp  base_controller.cpp  depth_node.cpp  fiducial_localizer.cpp  odom_to_path_node.cpp  orb_slam2_localizer.cpp  pid.cpp  pose_to_path_node.cpp  rov_node.cpp  simple_localizer.cpp  teleop_node.cpp  thrusters.cpp  underwater_motion.cpp
orca_bringup/: CMakeLists.txt  README.md  package.xml
orca_bringup/behavior_trees/: orca3_bt.xml
orca_bringup/cfg/: bringup.rviz  forward_800x600.yaml  forward_camera.ini  left_1640x1232.yaml  left_820x616.ini  pj_topside.xml  pj_vertical_detail.xml  right_1640x1232.yaml  right_820x616.ini  sim_launch.rviz  sim_launch_orb.rviz  sim_launch_vlam.rviz  slam_test_launch.rviz  stereo_left.ini  stereo_right.ini
orca_bringup/launch/: bringup.py  bringup_launch.py  calibrate_launch.py  mono_pi_launch.py  orb_test_launch.py  rov_sub_launch.py  rov_topside_launch.py  sim_launch.py  slam_test_launch.py  stereo_pi_launch.py  stereo_pi_sbs_launch.py  sub_launch.py  test_launch.py  topside_launch.py
orca_bringup/missions/: missions.txt
orca_bringup/params/: bench_orca_params.yaml  nav2_params.yaml  orb_stereo_params.yaml  orca_params.yaml  rov_topside_params.yaml  sim_orca_params.yaml  slam_test_params.yaml  stereo_pi_params.yaml  stereo_pi_sbs_params.yaml  topside_orca_params.yaml  xbox_holonomic_3d.yaml
orca_bringup/scripts/: dump_rosout.py
orca_bringup/worlds/: empty.pgm  empty_map.yaml  empty_world.yaml  ping_pong_map.yaml
orca_description/: CMakeLists.txt  README.md  package.xml
orca_driver/: CMakeLists.txt  README.md  package.xml
orca_driver/cfg/: brusb_dry_1280x720.ini  brusb_dry_1920x1080.yaml  brusb_dry_800x600.ini  brusb_wet_640x480.ini  brusb_wet_640x480.yaml  brusb_wet_800x600.ini  maestro.cfg  mono_pi_launch.rviz  stereo_pi_launch.rviz  stereo_rig_launch.rviz  wa1_dry_800x600.ini  wa1_dry_800x600.yaml  wa2_dry_800x600.ini  wa2_dry_800x600.yaml
orca_driver/cfg/stereo_rig/: left.ini  left.yaml  right.ini  right.yaml
orca_driver/docker/zed/foxy/: Dockerfile
orca_driver/include/orca_driver/: driver_context.hpp  maestro.hpp
orca_driver/launch/: auv_topside_launch.py  monitor_launch.py  mono_pi_launch.py  rov_topside_launch.py  stereo_pi_launch.py  stereo_pi_sbs_launch.py  stereo_rig_launch.py  sub_launch.py  test_gscam_launch.py  test_h264_cam_launch.py  test_launch.py  test_opencv_cam_launch.py  test_stereo_launch.py
orca_driver/maps/: simple_map.yaml
orca_driver/params/: mono_pi_params.yaml  stereo_pi_params.yaml  stereo_pi_sbs_params.yaml  stereo_rig_params.yaml
orca_driver/scripts/: dance_node.py  orca_driver.service  orca_fcam.service  orca_lcam.service  orca_rcam.service  set_pwm.sh  set_vr_vl_pwm.sh  setup.bash  start_driver.sh  start_fcam.sh  start_lcam.sh  start_rcam.sh  thrust_curve_node.py  topside_video.sh
orca_driver/src/: barometer_node.cpp  driver_node.cpp  gscam_vloc_main.cpp  maestro.cpp  test_node.cpp
orca_gazebo/: CMakeLists.txt  README.md  package.xml
orca_gazebo/include/orca_gazebo/: orca_gazebo_util.hpp
orca_gazebo/models/seafloor/: model.sdf
orca_gazebo/models/seafloor/materials/scripts/: seafloor.material
orca_gazebo/scripts/: build_world.py  find_transform.py  reliable_odom.py  republish_gt.py  seafloor_marker.py
orca_gazebo/src/: barometer_plugin.cpp  buoyancy_plugin.cpp  drag_plugin.cpp  thruster_plugin.cpp
orca_localize/: CMakeLists.txt  README.md  package.xml
orca_msgs/: CMakeLists.txt  README.md  package.xml
orca_msgs/msg/: Armed.msg  Barometer.msg  CameraTilt.msg  Depth.msg  Lights.msg  Motion.msg  Pid.msg  Status.msg  StereoStats.msg  Teleop.msg  Thrust.msg  Thrusters.msg  Vertical.msg
orca_nav2/: CMakeLists.txt  README.md  orca_controller_plugin.xml  orca_goal_checker_plugin.xml  orca_planner_plugin.xml  orca_progress_checker_plugin.xml  package.xml
orca_nav2/include/orca_nav2/: param_macro.hpp  util.hpp
orca_nav2/src/: goal_checker_3d.cpp  orca_controller.cpp  orca_goal_checker.cpp  orca_planner.cpp  orca_progress_checker.cpp  progress_checker_3d.cpp  pure_pursuit_controller_3d.cpp  straight_line_planner_3d.cpp
orca_shared/: CMakeLists.txt  README.md  package.xml
orca_shared/include/orca_shared/: baro.hpp  model.hpp  monotonic.hpp  pwm.hpp  test.hpp  util.hpp
orca_shared/include/orca_shared/mw/: accel.hpp  efforts.hpp  header.hpp  map.hpp  mw.hpp  point.hpp  pose.hpp  pose_stamped.hpp  quaternion.hpp  twist.hpp
orca_shared/src/: baro.cpp  model.cpp  mw.cpp  pwm.cpp  util.cpp
orca_shared/src/test/: test_main.cpp  test_mw_roundtrip.cpp  test_mw_use_cases.cpp  test_node.cpp
orca_topside/: CMakeLists.txt  README.md  package.xml
orca_topside/include/orca_topside/: aspect_ratio_widget.hpp  fps_calculator.hpp  gst_util.hpp  gst_widget.hpp  image_publisher.hpp  image_widget.hpp  node_spinner.hpp  teleop_node.hpp  topside_layout.hpp  topside_widget.hpp  video_pipeline.hpp  xbox.hpp
orca_topside/src/: aspect_ratio_widget.cpp  fps_calculator.cpp  gst_util.cpp  gst_widget.cpp  image_publisher.cpp  image_widget.cpp  node_spinner.cpp  teleop_main.cpp  teleop_node.cpp  topside_layout.cpp  topside_widget.cpp  video_pipeline.cpp
orca_vision/: CMakeLists.txt  package.xml  setup.bash
orca_vision/include/orca_vision/: odometry_publisher.hpp  parameters.hpp  perf.hpp  stereo_image.hpp  stereo_processor.hpp  util.hpp
orca_vision/launch/: sim_launch.py
orca_vision/models/seafloor/: model.config
orca_vision/src/: altitude.cpp  odom_to_path_node.cpp  odometry_publisher.cpp  pose_to_path.cpp  pose_to_path_node.cpp  stereo_image.cpp  stereo_odometry.cpp  stereo_odometry_node.cpp  stereo_processor.cpp  test.cpp  test_main.cpp  util.cpp
orca_vision/worlds/: underwater.world
(+8 files in other folders)
