<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>orca_gazebo</name>
  <version>0.4.0</version>
  <description>Orca simulation environment</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/clydemcqueen/orca3.git</url>
  <url type="bugtracker">https://github.com/clydemcqueen/orca3/issues</url>

  <author>Clyde McQueen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <!-- This recursively depends on a set of common linters -->
  <test_depend>ament_lint_common</test_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>orca_description</depend>
  <depend>orca_msgs</depend>
  <depend>orca_shared</depend>
  <depend>rclcpp</depend>
  <depend>ros2_shared</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>

</package>