<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>orca_topside</name>
  <version>0.1.0</version>
  <description>Orca Topside Control</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/clydemcqueen/orca3.git</url>
  <url type="bugtracker">https://github.com/clydemcqueen/orca3/issues</url>

  <author>Clyde McQueen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <!--
  uncrustify can't parse node_spinner.cpp, wait for fix
  <test_depend>ament_cmake_uncrustify</test_depend>
  -->

  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>h264_msgs</depend>
  <depend>libgstreamer1.0-dev</depend>
  <depend>libgstreamer-plugins-base1.0-dev</depend>
  <depend>orb_slam2_ros</depend>
  <depend>orca_msgs</depend>
  <depend>orca_shared</depend>
  <depend>rclcpp</depend>
  <depend>ros2_shared</depend>

  <!-- Optional, for debugging gstreamer pipelines: <depend>gst_tools</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>